--- a/paper-data-platforms.qmd
+++ b/paper-data-platforms.qmd
@@ -7,6 +7,7 @@ format:
   elsevier-pdf:
     keep-tex: true
     journal:
+      name: JIMR
       cite-style: authoryear
 author:
   - name: Daniel Kapitan
