--- a/paper-data-platforms.qmd
+++ b/paper-data-platforms.qmd
@@ -84,7 +84,7 @@ A commonly used perspective to scrutinize digital health is to consider it as a 
 
 Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This observation ties into the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. For example, the economic perspective on digital platforms stresses their multi-sidedness with developers and consumers, while data platforms are used by data owners, data consumers and third party solution providers. At the same time, data platforms differ as their main offerings revolve around data. From a market perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
 
-Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The objective of openness, the ways to realize openness and the risks of opening up can be considered as elements within the ongoing debate on data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond] in the healthcare domain, which is a current issue for high income countries and LMICs alike. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@otto2022designing]. 
+Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The objective of openness, the ways to realize openness and the risks of opening up can be considered as elements within the ongoing debate on data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond] in the healthcare domain, which is a current issue for high income countries and LMICs alike. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data]. 
 
 ### From health information exchanges to health data platforms
 
