--- a/paper-data-platforms.tex
+++ b/paper-data-platforms.tex
@@ -117,6 +117,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
+\journal{JIMR}
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -286,7 +287,7 @@ to realize a solidarity-based approach to health data sharing that i)
 gives people a greater control over their data as active decision
 makers; ii) ensures that the value of data is harnessed for public good;
 and iii) moves society towards equity and justice by counteracting
-dynamics of data extraction \citep{otto2022designing}.
+dynamics of data extraction \citep{prainsack2022data}.
 
 \subsection{From health information exchanges to health data
 platforms}\label{from-health-information-exchanges-to-health-data-platforms}
@@ -371,14 +372,14 @@ including open source implementations such as Pathling
 \citep{grimes2022pathling} and commercial offerings like Aidbox
 \citep{aidbox}. \\
 \textbf{3} & Data analytics modules, that provide access to work and
-access the data. & \textbf{Federated learning (FL)
-\citep{rieke2020future} and privacy- enhancing technologies (PETs)}
-\citep{scheibner2021revolutionizing, jordan2022selecting}: new paradigms
-that address the problem of data governance and privacy by training
-algorithms collaboratively without exchanging the data itself. Models
-can be trained on combined datasets and made available as open source
-artifacts for decision support. Data analysts can use FL and PETs to
-work with the data in a collaborative, decentralized fashion. \\
+access the data. & \textbf{Federated learning (FL)}
+\citep{rieke2020future} and \textbf{privacy- enhancing technologies
+(PETs)} \citep{scheibner2021revolutionizing, jordan2022selecting}: new
+paradigms that address the problem of data governance and privacy by
+training algorithms collaboratively without exchanging the data itself.
+Models can be trained on combined datasets and made available as open
+source artifacts for decision support. Data analysts can use FL and PETs
+to work with the data in a collaborative, decentralized fashion. \\
 \textbf{4} & Trained models that have been derived from the data and can
 be used stand-alone for decision support. & \textbf{ONNX} \citep{onnx}:
 an open format built to represent machine learning models. \\
